# knowhive

./: .gitignore  CONTRIBUTING.md  README.md  electron-builder.yml  electron.vite.config.ts  feature-requirements.md  index.html  package.json  pnpm-lock.yaml  progress.txt  tailwind.config.ts  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
backend/: progress.txt  pyproject.toml
backend/app/: config.py  database.py  eval_ragas.py  logging_config.py  main.py  models.py
backend/app/routers/: chat.py  community.py  config.py  embedding.py  export.py  ingest.py  (+6 more)
backend/knowledge/: TEMPLATE_GUIDE.md
backend/tests/: test_chat_api.py  test_chat_graph_wiring.py  test_community_import.py  test_community_router.py  test_community_service.py  test_config.py  test_config_phase10.py  test_config_phase9.py  test_data_dir_arg.py  test_database.py  test_e2e_wiring.py  test_embedding_api.py  test_embedding_download.py  test_embedding_service.py  test_embedding_wiring.py  test_eval_ragas.py  test_export_api.py  test_export_service.py  test_file_watcher.py  test_frontmatter_parser.py  test_heading_chunker.py  test_health.py  test_hyde_service.py  test_imports.py  test_ingest_api.py  test_ingest_eval_integration.py  test_ingest_migration.py  test_ingest_service.py  test_knowledge_api.py  test_langchain_langfuse.py  test_langfuse_tracing.py  test_leetcode_pack_integration.py  test_llm_factory.py  test_logging.py  test_memory_compression_service.py  test_multi_query_service.py  test_pdf_extractor.py  test_query_rewriter.py  test_rag_graph.py  test_rag_graph_auto_strategy.py  (+20 more)
(+108 files in other folders)
